<resources>
    <string name="app_name">BrickMate</string>
    <string name="login">Login</string>
    <string name="et_hint_enter_username">Enter username</string>
    <string name="et_hint_enter_password">Enter password</string>
    <string name="show_password">Show Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="err_msg_enter_email">Please enter your Email</string>
    <string name="err_msg_enter_password">Please enter your password</string>
    <string name="err_msg_login_credential_success">Login details valid</string>
    <string name="please_click_back_again_to_exit">Click back again to exit</string>
    <string name="please_wait">Please wait…</string>
    <string name="create_an_account">Create an account</string>
    <string name="et_hint_enter_firstname">Enter firstname</string>
    <string name="et_hint_enter_lastname">Enter lastname</string>
    <string name="et_hint_enter_email">Enter email(optional)</string>
    <string name="et_hint_enter_confirm_password">Confirm password</string>
    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_confirm_password">Please confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password do not match.</string>
    <string name="success_msg_registration">Registration Successful</string>
    <string name="dashboard">Dashboard</string>
    <string name="action_log_out">Logout</string>
    <string name="action_account">user</string>
    <string name="footer_text">Design by Indigi Consulting and Solutions (P) Ltd.</string>
    <string name="image">image</string>
    <string name="dashboard_grid_customer">Customers</string>
    <string name="dashboard_grid_products">Products</string>
    <string name="dashboard_grid_quotation">Quotations</string>
    <string name="dashboard_grid_payments">Payments</string>
    <string name="dashboard_grid_order_list">Order List</string>
    <string name="dashboard_grid_order">Order</string>
    <string name="splash_screen_title"><![CDATA[Start,Run & Grow your Businesses]]></string>
    <string name="splash_screen_sub_title">Let\'s make it simple</string>
    <string name="Customers">Customers</string>
    <string name="action_add_customer">Add new customer</string>
    <string name="et_hint_enter_phone">Enter 10 digit phone number</string>
    <string name="et_hint_enter_address">Enter address</string>
    <string name="lbl_radio_button_same">Same</string>
    <string name="lbl_radio_button_other">Other</string>
    <string name="hint_enter_delivery_address">Enter delivery address</string>
    <string name="hint_enter_delivery_landmark">Delivery landmark</string>
    <string name="err_msg_enter_phone">Please enter 10 digit mobile number</string>
    <string name="action_add_product">Add new product</string>
    <string name="content_description">image</string>
    <string name="et_hint_product_name">Enter product name</string>
    <string name="et_hint_product_description">Enter product description</string>
    <string name="et_hint_product_unit">Enter unit of measurement</string>
    <string name="et_hint_product_sell_price">Enter product sell price</string>
    <string name="et_hint_product_gst">Enter product GST rate (%)</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow in from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_select_product_image">Select a product image</string>
    <string name="err_msg_enter_product_title">Please enter product name</string>
    <string name="err_msg_enter_product_price">Please enter product price</string>
    <string name="err_msg_enter_product_description">Please enter product description</string>
    <string name="err_msg_enter_product_uom">Please enter product\'s unit of measurement</string>
    <string name="err_msg_enter_product_gst_rate">Please enter product GST rate</string>
    <string name="product_upload_success_msg">Product added successfully</string>
    <string name="search">Search...</string>
    <string name="no_address_found">No Address Found</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">Zipcode</string>
    <string name="hint_additional_note">Add delivery note</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="hint_other_details">Other details</string>
    <string name="err_msg_enter_address">Please enter address</string>
    <string name="err_msg_enter_zipcode">Please enter zipcode</string>
    <string name="err_msg_enter_landmark">Please enter landmark</string>
    <string name="err_msg_enter_valid_email_address">Please enter valid email</string>
    <string name="lbl_product_description">Description</string>
    <string name="lbl_product_unit">Unit of Measurement</string>
    <string name="lbl_product_sell_price">Sell Price</string>
    <string name="lbl_product_gst">GST rate (%)</string>
    <string name="btn_lbl_add_to_order">Add to order</string>
    <string name="btn_lbl_go_to_orders">Go to Orders</string>
    <string name="tv_divider">/</string>
    <string name="success_message_item_added_to_cart">Product added to cart!</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="lbl_subtotal">Sub Total</string>
    <string name="lbl_gst_charge">GST amount (5%)</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="hint_enter_capacity">Capacity</string>
    <string name="msg_item_removed_successfully">Item removed successfully</string>
    <string name="et_hint_enter_quantity">Enter Quantity</string>
    <string name="select_product">Select Product</string>
    <string name="order_summary">Order Details</string>
    <string name="btn_lbl_place_order">Place Order</string>
    <string name="search_customer_here">Search customer here ...</string>
    <string name="et_hint_enter_zipcode">Enter zipcode</string>
    <string name="et_hint_enter_landmark">Enter landmark</string>
    <string name="et_hint_enter_gstin">Enter GSTIN number(optional)</string>
    <string name="order_list">Order List</string>
    <string name="et_hint_regiter_enter_email">Enter Email</string>
    <string name="order_list_details">Order Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_hint_enter_name">Enter name</string>
    <string name="et_hint_additional_info">Additional Infomation</string>
    <string name="et_hint_enter_location">Location</string>
    <string name="orders">Orders</string>
    <string name="dropdown_icon">Dropdown Icon</string>
    <string name="btn_lbl_update_product">Update</string>
    <string name="btn_lbl_delete_product">Delete</string>
    <string name="search_order_here">Search Order here ...</string>
    <string name="edit_order">Edit Order</string>
    <string name="add_product_title">Add Product</string>
    <string name="add_button_label">Add</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="et_hint_label_quantity">Quantity</string>
    <string name="reset_password_description">Please enter your email below and submit. A link will be sent to your registered email ID.</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="email_sent_success">Password sent to registered email ID.</string>
    <string name="inquiry_product_description">Select products using the Add button and add quantity for each product as per client.</string>
    <string name="your_web_client_id">663388067113-mdsofmpodcmm4ji6rtuojaka5i2a3h4t.apps.googleusercontent.com</string>
    <string name="customer_details">Customer Details</string>
    <string name="et_hint_enter_site_person_contact">Site Person Contact No.(optional)</string>
    <string name="err_msg_enter_valid_email">Please enter valid email address.</string>
    <string name="et_hint_enter_gst">Enter GST(%)</string>
    <string name="user_profile">User Profile</string>
    <string name="add_company_detail">Add Company</string>
    <!-- Add company page -->
    <string name="err_msg_select_company_logo">Select a company logo</string>
    <string name="err_msg_enter_company_name">Please enter your Company Name</string>
    <string name="err_msg_enter_company_address">Please enter Company Address</string>
    <string name="err_msg_enter_company_city">Please enter City</string>
    <string name="err_msg_enter_company_state">Please enter State</string>
    <string name="err_msg_enter_company_pin_code">Please enter the pin code</string>
    <string name="success_msg_upload_company">Company information uploaded successfully to Cloud</string>
    <string name="view_quotation">View Quotation</string>

    <string-array name="delivery_status_options">
        <item>Delivered</item>
        <item>Pending</item>
    </string-array>
    <string-array name="paid_status_options">
        <item>Paid</item>
        <item>Pending</item>
    </string-array>
</resources>